# deepprint-agent

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: deep_print_schema.rs  engine.rs  lib.rs  main.rs  renderer.rs  server.rs  test.rs
