[package]
name = "deepprint-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deepprint_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] } # 异步运行时
axum = "0.8" # 高性能 Web Server
tower-http = { version = "0.5", features = ["cors", "fs"] } # 处理跨域(关键)

# 渲染引擎 (核心壁垒)
skia-safe = { version = "0.91.0", features = ["textlayout"] }

# 硬件交互
printers = "2.2.1" # 获取打印机列表
uuid = { version = "1", features = ["v4"] } # 生成任务ID

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

dirs = "5.0"

